--- a/front_crudaves/pubspec.yaml
+++ b/front_crudaves/pubspec.yaml
@@ -1,33 +1,3 @@
-# name: front_crudaves
-# description: A new Flutter project.
-# publish_to: 'none'
-# version: 0.1.0
-
-# environment:
-#   sdk: '>=3.0.6 <4.0.0'
-
-# dependencies:
-#   flutter_native_splash: ^2.2.9
-#   flutter:
-#     sdk: flutter
-#   http: ^0.13.4
-#   flutter_js: ^0.7.2
-
-# flutter_native_splash:
-#     color: "#FFFFFF"
-#     image: "assets/images/zécarioca.png"
-#     android: true
-#     ios: true
-
-# dev_dependencies:
-#   flutter_test:
-#     sdk: flutter
-#   flutter_lints: ^2.0.0
-
-# flutter:
-#   uses-material-design: true
-#   assets:
-#     - assets/images/zécarioca.png
 name: front_crudaves
 description: A new Flutter project.
 publish_to: 'none'
@@ -51,6 +21,13 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
 
-flutter:
+flutter_native_splash:
+    color: "#FFFFFF"
+    image: "assets/images/zécarioca.png"
+    android: true
+    ios: true
 
+flutter:
   uses-material-design: true
+  assets:
+    - assets/images/zécarioca.png
